[package]
name = "cooltext-pls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "system-proxy", "blocking", "deflate", "gzip", "brotli", "zstd", "rustls-tls"] }
